--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,10 @@ p {
 .examples .item {
   margin-right: 30px;
   margin-bottom: 30px;
+  border: 1px solid var(--color-line);
+}
+.examples .item:nth-child(3n) {
+  margin-right: 0;
 }
 .examples .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
