--- a/css/styles.css
+++ b/css/styles.css
@@ -136,7 +136,9 @@ p {
   text-decoration: none;
 }
 
-.head-container {
+.head {
+  background-color: var(--color-footer-bg);
+  text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
 }
@@ -287,7 +289,6 @@ p {
 .examples .item {
   margin-right: 30px;
   margin-bottom: 30px;
-  border: 1px solid var(--color-line);
 }
 .examples .item:nth-child(3n) {
   margin-right: 0;
@@ -298,6 +299,9 @@ p {
 
 .example-block {
   padding: 20px 24px;
+  border-left: 1px solid var(--color-line);
+  border-right: 1px solid var(--color-line);
+  border-bottom: 1px solid var(--color-line);
 }
 
 .example-title {
@@ -316,22 +320,18 @@ p {
 
 .example-link {
   text-decoration: none;
+  display: inline-grid;
 }
 
 .footer {
   background-color: var(--color-footer-bg);
-}
-
-.head {
-  background-color: var(--color-footer-bg);
-  text-align: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .foot-container {
   display: flex;
   flex-direction: column;
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 .footer-logo {
